# count-buffy

./: .dockerignore  .env.example  .env.example.small  .gitignore  .gitmodules  CMakeLists.txt  Developer.md  Dockerfile  Makefile  Readme.md  Todo.md  chart.py  comp.cpp  conanfile.txt  debug.cpp  demux.cpp  demux_big.cpp  demux_dev.cpp  demux_dev_auto.cpp  demux_dev_auto_opt.cpp  demux_dev_bak.cpp  demux_dev_complete.cpp  demux_dev_large.cpp  demux_dev_old.cpp  demux_multiple_dst.cpp  demux_multiple_src.cpp  demux_s1.cpp  demux_s2.cpp  demux_s3.cpp  docker-compose.local.yaml  docker-compose.yaml  fq.250.txt  fq.550.txt  fq.700.txt  fq.cpp  fq.sh  intr.cpp  leaf.10.txt  leaf.bak.txt  leaf.checked.txt  (+33 more)
.github/workflows/: docker-publish.yml
archive/: comp.cpp  debug.cpp  demux.cpp  demux_big.cpp  demux_multiple_dst.cpp  demux_multiple_src.cpp  demux_two_side.cpp  fq.300.txt  fq.350.txt  fq.450.txt  fq.600.txt  fq.800.txt  intr.cpp  leaf.cpp  leaf_fperf.cpp  line.cpp  loom.bak.cpp  loom.cpp  loom.new.cpp  loom.nomem.cpp  loom.s2.cpp  prio.bak.cpp  prio.sh  rr.bak.cpp  rr.sh  wins.cpp  wl.txt  wl.txt.bak
data/: .gitignore  draw_charts.py  new_chart.py
examples/: main.cpp  rate_limiter.cpp  rate_limiter.hpp
experiments/: chart.py  new_chart.py  new_chart_fq.py  table.csv  table.py
experiments/rr/: rr.10.bak.txt
leaf/fperf/: leaf.100.txt.1  leaf.100.txt.2
local/logs_bak/: chart.py  prio.10.txt  prio.100.txt  prio.250.txt  prio.400.txt  prio.50.txt  prio.500.txt  rr.125.txt  rr.175.txt  rr.200.txt  rr.50.txt  rr.75.txt
local/logs_sub/: chart_ebar.py  fq.10.txt  fq.100.txt  fq.20.txt  fq.50.txt  fq.75.txt  loom.mem.40.txt  loom.mem.700.txt  prio.125.txt  prio.150.txt  prio.30.txt  prio.350.txt  prio.50.txt  prio.75.txt  rr.10.txt  rr.100.txt  rr.150.txt  rr.20.txt  rr.30.txt  rr.400.txt  rr.50.txt
logs/: chart_ci.py  chart_ebar.py  chart_fine.py  chart_no_ebar.py  chart_percentile.py  fq.10.txt  fq.20.txt  fq.25.txt  fq.400.txt  leaf_no_win.txt  loom.mem.10.txt  loom.mem.200.txt  loom.mem.35.txt  loom_mem.10.txt  prio.10.txt  prio.100.txt  prio.125.txt  prio.150.txt  prio.175.txt  prio.20.txt  prio.200.txt  prio.25.txt  prio.250.txt  prio.30.txt  prio.300.txt  prio.350.txt  prio.40.txt  prio.400.txt  prio.450.txt  prio.50.txt  prio.500.txt  prio.75.txt  rr.0.txt  rr.10.txt  rr.100.txt  rr.125.txt  rr.150.txt  rr.175.txt  rr.20.txt  rr.200.txt  (+11 more)
logs_bak/: prio.150.txt  prio.175.txt  prio.350.txt  prio.450.txt  prio.75.txt  rr.10.txt  rr.100.txt  rr.300.txt  rr.350.txt  rr.400.txt
logs_sub/: chart.py  chart_no_ebar.py  fq.175.txt  loom.mem.20.txt  loom.mem.400.txt  loom.mem.600.txt  prio.10.txt  prio.100.txt  prio.20.txt  prio.200.txt  prio.25.txt  prio.250.txt  prio.400.txt  prio.450.txt  prio.500.txt  rr.175.txt  rr.200.txt  rr.25.txt  rr.250.txt  rr.350.txt  rr.40.txt  rr.75.txt
scripts/: buffy_verify.sh  buffy_verify_all_workloads.sh  check_all_workloads_with_fperf.sh  draw_all_charts.sh  draw_all_plots.sh  draw_chart.py  draw_chart.sh  draw_plot.py  draw_plot.sh  fperf_search_all.sh  fperf_verify.sh  fperf_verify_all_workloads.sh  lib.sh  run_all_experiments.sh  run_all_fperf.sh  run_experiment.sh  run_fperf.sh
src/: Buff.cpp  Buff.hpp  DemuxSwitch.cpp  DemuxSwitch.hpp  FqChecker.cpp  FqChecker.cpp.bak  FqChecker.hpp  IntSeq.cpp  IntSeq.hpp  SparseBuff.cpp  SparseBuff.hpp  classifier.cpp  classifier.hpp  fperf_leaf_sts.cpp  fperf_leaf_sts.hpp  leaf_base.cpp  leaf_base.hpp  leaf_sts.bak.cpp.bak  leaf_sts.cpp  leaf_sts.hpp  leaf_utils.cpp  leaf_utils.hpp  lib.cpp  lib.hpp  loom_sts_runner.cpp  loom_sts_runner.hpp  merger.cpp  merger.hpp  named_expr.cpp  named_expr.hpp  params.hpp  prio_sts.cpp  prio_sts.hpp  rr_checker.cpp  rr_checker.hpp  smt_solver.cpp  smt_solver.hpp  sts_checker.cpp  sts_checker.cpp.bak  sts_checker.hpp  (+8 more)
src/leaf_spine/: DemuxSwitch.cpp  DemuxSwitch.hpp  LeafBuff.cpp  demux_switch.cpp  fperf_leaf_sts.cpp  fperf_leaf_sts.hpp  leaf_base.cpp  leaf_base.hpp  leaf_buff.cpp  leaf_buff.hpp  (+8 more)
wls/: fq.10.all.txt  fq.10.txt  fq.100.txt  fq.125.txt  fq.150.txt  fq.175.txt  fq.20.txt  fq.200.txt  fq.25.txt  fq.250.txt  fq.30.txt  fq.300.txt  fq.350.txt  fq.40.txt  fq.400.txt  fq.50.old.txt  fq.50.txt  fq.75.txt  fq.900.txt  fq.txt  leaf.10.txt  loom.bak.txt  loom.mem.10.bak.txt  loom.mem.txt  loom.nonmem.bak.txt  loom.nonmem.txt  loom.txt  loom_mem.10.bak.txt  loom_mem.10.txt  loom_mem.20.txt  loom_mem.25.txt  loom_mem.30.txt  loom_mem.40.txt  loom_mem.50.txt  prio.10.small.txt  prio.100.txt  prio.125.txt  prio.150.txt  prio.250.txt  prio.300.txt  (+20 more)
(+340 files in other folders)
