cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
#set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
project(DFA)
file(GLOB SRC_FILES src/*.cpp src/gen/*.cpp)
file(GLOB HPP_FILES src/*.hpp src/gen/*.hpp)

function(add_target name source_file)
    add_executable(${name} ${source_file} ${SRC_FILES} ${HPP_FILES})
    target_include_directories(${name} PRIVATE /usr/local/include)
    target_link_directories(${name} PRIVATE /usr/local/lib)
    target_link_libraries(${name} PRIVATE z3)
    target_include_directories(${name} PRIVATE /usr/local/include/antlr4-runtime)
    target_link_libraries(${name} PRIVATE antlr4-runtime)
endfunction()


add_target(RR rr.cpp)
add_target(Prio prio.cpp)
add_target(Loom loom.cpp)
add_target(FQ fq.cpp)
add_target(Leaf leaf.cpp)